@@ -1,3 +1,8 @@
+2007-11-17  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/scrollbar.tcl: Swap in core scrollbars for 
+	[ttk::scrollbar]s on OSX.
+
 2007-11-16  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>
 
 	* macosx/tkMacOSXFont.c (TkpMeasureCharsInContext): Correct an
